FWUV-292: Get schoold ids attribute from authenticator config (#136)